[package]
name = "parco"
version = "2.0.0"
edition = "2021"
description = "Zero-cost parser combinators"
license = "MIT"
documentation = "https://docs.rs/parco"
homepage = "https://github.com/megahomyak/parco"
repository = "https://github.com/megahomyak/parco"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
