[package]
name = "parco"
version = "3.0.1"
edition = "2021"
description = "Zero-cost parser combinators"
license = "MIT"
documentation = "https://docs.rs/parco"
homepage = "https://github.com/megahomyak/parco"
repository = "https://github.com/megahomyak/parco"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
